# webhook-deploy-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: config.toml
src/: command.rs  config.rs  main.rs
