[package]
name = "webhook-deploy-rs"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
actix-web = "4.3.1"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
